--- a/HelloWorld/WebContent/home.html
+++ b/HelloWorld/WebContent/home.html
@@ -5,11 +5,7 @@
 <title>Home Page</title>
 </head>
 <body bgcolor="pink">
-	<!--<a href="hello">Click Here</a> -->
-	<form action="greeter" method="post">
-		<label>Enter your name:</label> <input type="text" name="username"
-			size="15" /> <input type="submit" />
-
-	</form>
+	<a href="currency">Click Here</a>
+	
 </body>
 </html>
